--- a/main.html
+++ b/main.html
@@ -8,7 +8,63 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Student Details</title>
+  <style>
+    table {
+      border: 1px solid black;
+      background-color: yellow;
+      border-collapse: collapse;
+      width: 50%;
+    }
+    th, td {
+      border: 1px solid black;
+      padding: 2px;
+      text-align: left;
+    }
+    th {
+      background-color: yellow;
+    }
+  </style>
+</head>
+<body>
+
+<table>
+  <caption>Student Details</caption>
+  <thead>
+    <tr>
+      <th>NAME</th>
+      <th>AGE</th>
+      <th>BRANCH</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>John Doe</td>
+      <td>20</td>
+      <td>Computer Science</td>
+    </tr>
+    <tr>
+      <td>Jane Smith</td>
+      <td>22</td>
+      <td>Electrical Engineering</td>
+    </tr>
+    <tr>
+      <td>Michael Johnson</td>
+      <td>21</td>
+      <td>Mechanical Engineering</td>
+    </tr>
+  </tbody>
+</table>
+
+</body>
+</html>
+	
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
